commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionaltopbottomrule.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.conditionaltopbottomrule.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ConditionalTopBottomRule
+  - uid: 'excel!Excel.ConditionalTopBottomRule:interface'
     summary: |-
-      <span data-ttu-id="95522-101">表示顶部/底部条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="95522-101">Represents the rule of the top/bottom conditional format.</span></span>
+      <span data-ttu-id="f69bf-101">表示顶部/底部条件格式的规则。</span><span class="sxs-lookup"><span data-stu-id="f69bf-101">Represents the rule of the top/bottom conditional format.</span></span>
 
-      <span data-ttu-id="95522-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95522-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f69bf-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f69bf-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.ConditionalTopBottomRule
     fullName: Excel.ConditionalTopBottomRule
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ConditionalTopBottomRule.rank
-      - excel.Excel.ConditionalTopBottomRule.type
-  - uid: excel.Excel.ConditionalTopBottomRule.rank
+      - 'excel!Excel.ConditionalTopBottomRule#rank:member'
+      - 'excel!Excel.ConditionalTopBottomRule#type:member'
+  - uid: 'excel!Excel.ConditionalTopBottomRule#rank:member'
     summary: |-
-      <span data-ttu-id="95522-103">1 和 1000 之间的数字排名或 1 和 100 之间的百分比排名。</span><span class="sxs-lookup"><span data-stu-id="95522-103">The rank between 1 and 1000 for numeric ranks or 1 and 100 for percent ranks.</span></span>
+      <span data-ttu-id="f69bf-103">1 和 1000 之间的数字排名或 1 和 100 之间的百分比排名。</span><span class="sxs-lookup"><span data-stu-id="f69bf-103">The rank between 1 and 1000 for numeric ranks or 1 and 100 for percent ranks.</span></span>
 
-      <span data-ttu-id="95522-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95522-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f69bf-104">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f69bf-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: rank
     fullName: rank
     langs:
@@ -29,11 +29,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.ConditionalTopBottomRule.type
+  - uid: 'excel!Excel.ConditionalTopBottomRule#type:member'
     summary: |-
-      <span data-ttu-id="95522-105">根据顶部或底部排名设置值的格式。</span><span class="sxs-lookup"><span data-stu-id="95522-105">Format values based on the top or bottom rank.</span></span>
+      <span data-ttu-id="f69bf-105">根据顶部或底部排名设置值的格式。</span><span class="sxs-lookup"><span data-stu-id="f69bf-105">Format values based on the top or bottom rank.</span></span>
 
-      <span data-ttu-id="95522-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95522-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="f69bf-106">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f69bf-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: type
     fullName: type
     langs:
@@ -43,4 +43,14 @@ items:
       content: 'type: Excel.ConditionalTopBottomCriterionType | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent";'
       return:
         type:
-          - Excel.ConditionalTopBottomCriterionType | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent"
+          - 'excel!Excel.ConditionalTopBottomRule#type~0:complex'
+references:
+  - uid: 'excel!Excel.ConditionalTopBottomRule#type~0:complex'
+    name: Excel.ConditionalTopBottomCriterionType | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent"
+    fullName: Excel.ConditionalTopBottomCriterionType | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent"
+    spec.typeScript:
+      - uid: 'excel!Excel.ConditionalTopBottomCriterionType:enum'
+        name: Excel.ConditionalTopBottomCriterionType
+        fullName: Excel.ConditionalTopBottomCriterionType
+      - name: ' | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent"'
+        fullName: ' | "Invalid" | "TopItems" | "TopPercent" | "BottomItems" | "BottomPercent"'
