--- a/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.interfaces.shapedataitemcollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: visio.Visio.Interfaces.ShapeDataItemCollectionUpdateData
-    summary: '<span data-ttu-id="1c5da-101">一个用于更新 ShapeDataItemCollection 对象上的数据的接口, 可用于 "shapeDataItemCollection (</span><span class="sxs-lookup"><span data-stu-id="1c5da-101">An interface for updating data on the ShapeDataItemCollection object, for use in "shapeDataItemCollection.set(</span></span><!-- --><span data-ttu-id="1c5da-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="1c5da-102"></span></span><!-- --><span data-ttu-id="1c5da-103">)".</span><span class="sxs-lookup"><span data-stu-id="1c5da-103"></span></span>'
+  - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData:interface'
+    summary: '<span data-ttu-id="baf45-101">一个用于更新 ShapeDataItemCollection 对象上的数据的接口，可用于 "shapeDataItemCollection （</span><span class="sxs-lookup"><span data-stu-id="baf45-101">An interface for updating data on the ShapeDataItemCollection object, for use in "shapeDataItemCollection.set(</span></span><!-- --><span data-ttu-id="baf45-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="baf45-102"></span></span><!-- --><span data-ttu-id="baf45-103">)".</span><span class="sxs-lookup"><span data-stu-id="baf45-103"></span></span>'
     name: Visio.Interfaces.ShapeDataItemCollectionUpdateData
     fullName: Visio.Interfaces.ShapeDataItemCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: visio
+    package: visio!
     children:
-      - visio.Visio.Interfaces.ShapeDataItemCollectionUpdateData.items
-  - uid: visio.Visio.Interfaces.ShapeDataItemCollectionUpdateData.items
+      - 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData#items:member'
+  - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: Visio.Interfaces.ShapeDataItemData[];'
       return:
         type:
-          - 'Visio.Interfaces.ShapeDataItemData[]'
+          - 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'visio!Visio.Interfaces.ShapeDataItemCollectionUpdateData#items~0:complex'
+    name: 'Visio.Interfaces.ShapeDataItemData[]'
+    fullName: 'Visio.Interfaces.ShapeDataItemData[]'
+    spec.typeScript:
+      - uid: 'visio!Visio.Interfaces.ShapeDataItemData:interface'
+        name: Visio.Interfaces.ShapeDataItemData
+        fullName: Visio.Interfaces.ShapeDataItemData
+      - name: '[]'
+        fullName: '[]'
