--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartpivotoptionsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartpivotoptionsupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsUpdateData
-    summary: '<span data-ttu-id="840f1-101">一个用于更新 ChartPivotOptions 对象上的数据的接口, 可用于 "chartPivotOptions (</span><span class="sxs-lookup"><span data-stu-id="840f1-101">An interface for updating data on the ChartPivotOptions object, for use in "chartPivotOptions.set(</span></span><!-- --><span data-ttu-id="840f1-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="840f1-102"></span></span><!-- --><span data-ttu-id="840f1-103">)".</span><span class="sxs-lookup"><span data-stu-id="840f1-103"></span></span>'
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsUpdateData:interface'
+    summary: '<span data-ttu-id="ee549-101">一个用于更新 ChartPivotOptions 对象上的数据的接口，可用于 "chartPivotOptions （</span><span class="sxs-lookup"><span data-stu-id="ee549-101">An interface for updating data on the ChartPivotOptions object, for use in "chartPivotOptions.set(</span></span><!-- --><span data-ttu-id="ee549-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="ee549-102"></span></span><!-- --><span data-ttu-id="ee549-103">)".</span><span class="sxs-lookup"><span data-stu-id="ee549-103"></span></span>'
     name: Excel.Interfaces.ChartPivotOptionsUpdateData
     fullName: Excel.Interfaces.ChartPivotOptionsUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
