--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotarealoadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotarealoadoptions.yml
@@ -1,29 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="2d76c-101">此对象表示 chart plotArea 对象的属性。</span><span class="sxs-lookup"><span data-stu-id="2d76c-101">This object represents the attributes for a chart plotArea object.</span></span>
+      <span data-ttu-id="86ce8-101">此对象表示 chart plotArea 对象的属性。</span><span class="sxs-lookup"><span data-stu-id="86ce8-101">This object represents the attributes for a chart plotArea object.</span></span>
 
-      <span data-ttu-id="2d76c-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: Excel.Interfaces.ChartPlotAreaLoadOptions
     fullName: Excel.Interfaces.ChartPlotAreaLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.$all
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.format
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.height
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideHeight
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideLeft
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideTop
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideWidth
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.left
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.position
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.top
-      - excel.Excel.Interfaces.ChartPlotAreaLoadOptions.width
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#height:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideHeight:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideLeft:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideTop:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideWidth:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#left:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#position:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#top:member'
+      - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#width:member'
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -34,11 +34,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="2d76c-103">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="2d76c-103">Represents the formatting of a chart plotArea.</span></span>
+      <span data-ttu-id="86ce8-103">表示图表 plotArea 的格式。</span><span class="sxs-lookup"><span data-stu-id="86ce8-103">Represents the formatting of a chart plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-104">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: format
     fullName: format
     langs:
@@ -48,12 +48,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartPlotAreaFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPlotAreaFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.height
+          - 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#height:member'
     summary: |-
-      <span data-ttu-id="2d76c-105">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-105">Represents the height value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-105">表示 plotArea 的高度值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-105">Represents the height value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-106">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: height
     fullName: height
     langs:
@@ -64,11 +64,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideHeight
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideHeight:member'
     summary: |-
-      <span data-ttu-id="2d76c-107">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-107">Represents the insideHeight value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-107">表示 plotArea 的 insideHeight 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-107">Represents the insideHeight value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideHeight
     fullName: insideHeight
     langs:
@@ -79,11 +79,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideLeft
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideLeft:member'
     summary: |-
-      <span data-ttu-id="2d76c-109">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-109">Represents the insideLeft value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-109">表示 plotArea 的 insideLeft 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-109">Represents the insideLeft value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-110">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideLeft
     fullName: insideLeft
     langs:
@@ -94,11 +94,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideTop
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideTop:member'
     summary: |-
-      <span data-ttu-id="2d76c-111">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-111">Represents the insideTop value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-111">表示 plotArea 的 insideTop 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-111">Represents the insideTop value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideTop
     fullName: insideTop
     langs:
@@ -109,11 +109,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.insideWidth
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#insideWidth:member'
     summary: |-
-      <span data-ttu-id="2d76c-113">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-113">Represents the insideWidth value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-113">表示 plotArea 的 insideWidth 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-113">Represents the insideWidth value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: insideWidth
     fullName: insideWidth
     langs:
@@ -124,11 +124,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.left
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#left:member'
     summary: |-
-      <span data-ttu-id="2d76c-115">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-115">Represents the left value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-115">表示 plotArea 的 left 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-115">Represents the left value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-116">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: left
     fullName: left
     langs:
@@ -139,11 +139,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.position
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#position:member'
     summary: |-
-      <span data-ttu-id="2d76c-117">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="2d76c-117">Represents the position of plotArea.</span></span>
+      <span data-ttu-id="86ce8-117">表示 plotArea 的位置。</span><span class="sxs-lookup"><span data-stu-id="86ce8-117">Represents the position of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-118">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: position
     fullName: position
     langs:
@@ -154,11 +154,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.top
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#top:member'
     summary: |-
-      <span data-ttu-id="2d76c-119">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-119">Represents the top value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-119">表示 plotArea 的 top 值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-119">Represents the top value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-120">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-120">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-120">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: top
     fullName: top
     langs:
@@ -169,11 +169,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPlotAreaLoadOptions.width
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions#width:member'
     summary: |-
-      <span data-ttu-id="2d76c-121">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="2d76c-121">Represents the width value of plotArea.</span></span>
+      <span data-ttu-id="86ce8-121">表示 plotArea 的宽度值。</span><span class="sxs-lookup"><span data-stu-id="86ce8-121">Represents the width value of plotArea.</span></span>
 
-      <span data-ttu-id="2d76c-122">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2d76c-122">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="86ce8-122">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="86ce8-122">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: width
     fullName: width
     langs:
@@ -184,3 +184,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartPlotAreaFormatLoadOptions
