--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiongroupdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.sectiongroupdata.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.SectionGroupData
-    summary: <span data-ttu-id="20a65-101">描述通过调用 "sectionGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="20a65-101">An interface describing the data returned by calling "sectionGroup.toJSON()".</span></span>
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData:interface'
+    summary: <span data-ttu-id="202f1-101">描述通过调用 "sectionGroup （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="202f1-101">An interface describing the data returned by calling "sectionGroup.toJSON()".</span></span>
     name: OneNote.Interfaces.SectionGroupData
     fullName: OneNote.Interfaces.SectionGroupData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.SectionGroupData.clientUrl
-      - onenote.OneNote.Interfaces.SectionGroupData.id
-      - onenote.OneNote.Interfaces.SectionGroupData.name
-      - onenote.OneNote.Interfaces.SectionGroupData.sectionGroups
-      - onenote.OneNote.Interfaces.SectionGroupData.sections
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.clientUrl
+      - 'onenote!OneNote.Interfaces.SectionGroupData#clientUrl:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#id:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#name:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups:member'
+      - 'onenote!OneNote.Interfaces.SectionGroupData#sections:member'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#clientUrl:member'
     summary: |-
-      <span data-ttu-id="20a65-102">分区组的客户端 url。</span><span class="sxs-lookup"><span data-stu-id="20a65-102">The client url of the section group.</span></span> <span data-ttu-id="20a65-103">只读</span><span class="sxs-lookup"><span data-stu-id="20a65-103">Read only</span></span>
+      <span data-ttu-id="202f1-102">分区组的客户端 url。</span><span class="sxs-lookup"><span data-stu-id="202f1-102">The client url of the section group.</span></span> <span data-ttu-id="202f1-103">只读</span><span class="sxs-lookup"><span data-stu-id="202f1-103">Read only</span></span>
 
-      <span data-ttu-id="20a65-104">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20a65-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="202f1-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="202f1-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: clientUrl
     fullName: clientUrl
     langs:
@@ -29,11 +29,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.id
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#id:member'
     summary: |-
-      <span data-ttu-id="20a65-105">获取分区组的 ID。</span><span class="sxs-lookup"><span data-stu-id="20a65-105">Gets the ID of the section group.</span></span> <span data-ttu-id="20a65-106">只读。</span><span class="sxs-lookup"><span data-stu-id="20a65-106">Read-only.</span></span>
+      <span data-ttu-id="202f1-105">获取分区组的 ID。</span><span class="sxs-lookup"><span data-stu-id="202f1-105">Gets the ID of the section group.</span></span> <span data-ttu-id="202f1-106">只读。</span><span class="sxs-lookup"><span data-stu-id="202f1-106">Read-only.</span></span>
 
-      <span data-ttu-id="20a65-107">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20a65-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="202f1-107">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="202f1-107">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: id
     fullName: id
     langs:
@@ -44,11 +44,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.name
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#name:member'
     summary: |-
-      <span data-ttu-id="20a65-108">获取分区组的名称。</span><span class="sxs-lookup"><span data-stu-id="20a65-108">Gets the name of the section group.</span></span> <span data-ttu-id="20a65-109">只读。</span><span class="sxs-lookup"><span data-stu-id="20a65-109">Read-only.</span></span>
+      <span data-ttu-id="202f1-108">获取分区组的名称。</span><span class="sxs-lookup"><span data-stu-id="202f1-108">Gets the name of the section group.</span></span> <span data-ttu-id="202f1-109">只读。</span><span class="sxs-lookup"><span data-stu-id="202f1-109">Read-only.</span></span>
 
-      <span data-ttu-id="20a65-110">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20a65-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="202f1-110">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="202f1-110">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: name
     fullName: name
     langs:
@@ -59,11 +59,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.sectionGroups
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups:member'
     summary: |-
-      <span data-ttu-id="20a65-111">分区组中的分区组集合。</span><span class="sxs-lookup"><span data-stu-id="20a65-111">The collection of section groups in the section group.</span></span> <span data-ttu-id="20a65-112">只读</span><span class="sxs-lookup"><span data-stu-id="20a65-112">Read only</span></span>
+      <span data-ttu-id="202f1-111">分区组中的分区组集合。</span><span class="sxs-lookup"><span data-stu-id="202f1-111">The collection of section groups in the section group.</span></span> <span data-ttu-id="202f1-112">只读</span><span class="sxs-lookup"><span data-stu-id="202f1-112">Read only</span></span>
 
-      <span data-ttu-id="20a65-113">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20a65-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="202f1-113">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="202f1-113">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: sectionGroups
     fullName: sectionGroups
     langs:
@@ -73,12 +73,12 @@ items:
       content: 'sectionGroups?: OneNote.Interfaces.SectionGroupData[];'
       return:
         type:
-          - 'OneNote.Interfaces.SectionGroupData[]'
-  - uid: onenote.OneNote.Interfaces.SectionGroupData.sections
+          - 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups~0:complex'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sections:member'
     summary: |-
-      <span data-ttu-id="20a65-114">分区组中的分区集合。</span><span class="sxs-lookup"><span data-stu-id="20a65-114">The collection of sections in the section group.</span></span> <span data-ttu-id="20a65-115">只读</span><span class="sxs-lookup"><span data-stu-id="20a65-115">Read only</span></span>
+      <span data-ttu-id="202f1-114">分区组中的分区集合。</span><span class="sxs-lookup"><span data-stu-id="202f1-114">The collection of sections in the section group.</span></span> <span data-ttu-id="202f1-115">只读</span><span class="sxs-lookup"><span data-stu-id="202f1-115">Read only</span></span>
 
-      <span data-ttu-id="20a65-116">\[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="20a65-116">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="202f1-116">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="202f1-116">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
     name: sections
     fullName: sections
     langs:
@@ -88,4 +88,23 @@ items:
       content: 'sections?: OneNote.Interfaces.SectionData[];'
       return:
         type:
-          - 'OneNote.Interfaces.SectionData[]'
+          - 'onenote!OneNote.Interfaces.SectionGroupData#sections~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sectionGroups~0:complex'
+    name: 'OneNote.Interfaces.SectionGroupData[]'
+    fullName: 'OneNote.Interfaces.SectionGroupData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.SectionGroupData:interface'
+        name: OneNote.Interfaces.SectionGroupData
+        fullName: OneNote.Interfaces.SectionGroupData
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'onenote!OneNote.Interfaces.SectionGroupData#sections~0:complex'
+    name: 'OneNote.Interfaces.SectionData[]'
+    fullName: 'OneNote.Interfaces.SectionData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.SectionData:interface'
+        name: OneNote.Interfaces.SectionData
+        fullName: OneNote.Interfaces.SectionData
+      - name: '[]'
+        fullName: '[]'
