--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablerowcollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.TableRowCollectionUpdateData
-    summary: '<span data-ttu-id="a7264-101">一个用于更新 TableRowCollection 对象上的数据的接口, 可用于 "tableRowCollection (</span><span class="sxs-lookup"><span data-stu-id="a7264-101">An interface for updating data on the TableRowCollection object, for use in "tableRowCollection.set(</span></span><!-- --><span data-ttu-id="a7264-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="a7264-102"></span></span><!-- --><span data-ttu-id="a7264-103">)".</span><span class="sxs-lookup"><span data-stu-id="a7264-103"></span></span>'
+  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData:interface'
+    summary: '<span data-ttu-id="2da59-101">一个用于更新 TableRowCollection 对象上的数据的接口，可用于 "tableRowCollection （</span><span class="sxs-lookup"><span data-stu-id="2da59-101">An interface for updating data on the TableRowCollection object, for use in "tableRowCollection.set(</span></span><!-- --><span data-ttu-id="2da59-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="2da59-102"></span></span><!-- --><span data-ttu-id="2da59-103">)".</span><span class="sxs-lookup"><span data-stu-id="2da59-103"></span></span>'
     name: OneNote.Interfaces.TableRowCollectionUpdateData
     fullName: OneNote.Interfaces.TableRowCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.TableRowCollectionUpdateData.items
-  - uid: onenote.OneNote.Interfaces.TableRowCollectionUpdateData.items
+      - 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items:member'
+  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: OneNote.Interfaces.TableRowData[];'
       return:
         type:
-          - 'OneNote.Interfaces.TableRowData[]'
+          - 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.TableRowCollectionUpdateData#items~0:complex'
+    name: 'OneNote.Interfaces.TableRowData[]'
+    fullName: 'OneNote.Interfaces.TableRowData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.TableRowData:interface'
+        name: OneNote.Interfaces.TableRowData
+        fullName: OneNote.Interfaces.TableRowData
+      - name: '[]'
+        fullName: '[]'
